--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -35,4 +35,7 @@
 	#redo-btn {
 		font-size: $input-font-size;
 	}
+	.highlight-btn {
+		font-size: $body-font-size;
+	}
 }
